# ChangeLog for gnome-extra/wp_tray
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/wp_tray/Attic/ChangeLog,v 1.6 2011/03/26 20:05:41 ssuominen Exp $

  26 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> wp_tray-0.5.5.ebuild,
  +files/wp_tray-0.5.5-libnotify-0.7.patch:
  Fix building with x11-libs/libnotify >= 0.7 wrt #360627 by Joost Ruis.

  11 Jan 2011; Pacho Ramos <pacho@gentoo.org> wp_tray-0.5.5.ebuild:
  Needs gnome-panel with bonobo support (bug #348173).

  23 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> wp_tray-0.5.5.ebuild,
  +files/wp_tray-0.5.5-gcc45.patch:
  Fix building with GCC 4.5+ wrt #323079 by Diego E. Pettenò.

  23 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> wp_tray-0.5.5.ebuild:
  Missing libpanelapplet-2.0 rdep wrt #320117 by Diego E. Pettenò.

  30 Jul 2009; Tobias Scherbaum <dertobi123@gentoo.org> metadata.xml:
  add no-herd to metadata, #279216

*wp_tray-0.5.5 (17 May 2009)

  17 May 2009; Tobias Scherbaum <dertobi123@gentoo.org> +metadata.xml,
  +wp_tray-0.5.5.ebuild:
  Initial import, based on an ebuild by me from the gentoo-de overlay. Closed
  #108419
