@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/wp_tray
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/wp_tray/Attic/ChangeLog,v 1.6 2011/03/26 20:05:41 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/wp_tray/Attic/ChangeLog,v 1.7 2011/08/04 10:42:25 hwoarang Exp $
+
+  04 Aug 2011; Markos Chandras <hwoarang@gentoo.org> wp_tray-0.5.5.ebuild:
+  Append -DBOOST_FILESYSTEM_VERSION=2 to C{XX}FLAGS. Bug #362909
 
   26 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> wp_tray-0.5.5.ebuild,
   +files/wp_tray-0.5.5-libnotify-0.7.patch:
